# decorator_pattern

./: CMakeLists.txt  README.md  component.cpp  component.h  concreteComponent.cpp  concreteComponent.h  concreteDecoratorA.cpp  concreteDecoratorA.h  concreteDecoratorB.cpp  concreteDecoratorB.h  concreteDecoratorC.cpp  concreteDecoratorC.h  decorator.cpp  decorator.h  test_decorator.cpp  test_decorator.h
